# tetris-rust

./: Cargo.toml  README.md  config.json
src/: main.rs
src/game/: board.rs  config.rs  game.rs  mod.rs  pieces.rs
