[package]
name = "tetris-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.7"
rand = "0.8"
glam = "0.20.5"
thousands = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
